# opp_cursova

./: CMakeLists.txt  README.md  reversi.spec
cpp/include/: AI.hpp  Board.hpp  Game.hpp  api.h
cpp/src/: AI.cpp  Board.cpp  Game.cpp  api.cpp
python/: README.md  main.py  reversi_core.py  run_experiments.py
python/services/: core.py
python/ui/: animation.py  draw.py  eval.py  game_ui.py  menu.py
